[package]
name = "gunz-replay"
description = "A simple GunZ: The Duel replay examiner"
version = "0.0.1-SNAPSHOT"
edition = "2018"
authors = ["mataha <mataha@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/mataha/gunz-replay"
keywords = ["gunz", "replay"]
categories = ["command-line-utilities", "parser-implementations"]

# Don't publish this yet
publish = false

[badges]
maintenance = { status = "experimental" }

[[bin]]
name = "gzre"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
#clap = "3.0.0-beta.2"
encoding_rs = "0.8.28"
flate2 = "1.0.20"
